--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Galaxy-P in the Cloud: Proteomic Informatics on JetStream</h1>
-      <h2 class="project-tagline"><a style="color:yellow;" href="http://z.umn.edu/metaproteomicsgateway">http://z.umn.edu/asms2017</a></h2>
+      <h2 class="project-tagline"><a style="color:yellow;" href="http://z.umn.edu/asms2017">http://z.umn.edu/asms2017</a></h2>
     </section>
 
     <section class="main-content">
